# j-math

./: .travis.yml  CMakeLists.txt
lib/: CMakeLists.txt
lib/analysis/: interpolation.h  sequence.h
lib/geometry/: coordinate_frame.h  plane.h  point.h  sphere.h  vector.h
lib/utility/: clamp.h  pi.h
main/: CMakeLists.txt  main.cc
src/: coordinate_frame.h  line.h  main.cc  numeric_comparison.h  pi.h  plane.h  point.h  shape_types.h  sphere.h  vector.h
test/: CMakeLists.txt  coordinate_frame_test.cc  line_test.cc  main.cc  numeric_comparison_test.cc  plane_test.cc  point_test.cc  sphere_test.cc  vector_test.cc
test/geometry/: coordinate_frame_test.cc  line_test.cc  plane_test.cc  point_test.cc  sphere_test.cc  vector_test.cc
test/utility/: numeric_comparison_test.cc
